seemingly correct MIS

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Fragment Shader Path Tracer</title>
+    <title>Pike 🐟</title>
     <link rel="stylesheet" type="text/css" href="application.css">
     <script type="module" src="vector.js"></script>
     <script type="module" src="utility.js"></script>
