--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <input id="env-theta" value="0" type="range" min="0" max="1" step="0.01"><br>
         <label for="exposure">Exposure</label><br>
         <input id="exposure" value="1" type="range" min="0" max="6" step="0.01"><br>
-        <label for="saturation">Saturation</label><br>
-        <input id="saturation" value="1" type="range" min="0" max="6" step="0.01"><br>
-        <label for="denoise">Firefly Filter</label><br>
-        <input id="denoise" type="checkbox"></input><br>
-        <label for="sigma">Firefly Sigma</label><br>
-        <input id="sigma" value="2" type="range" min="1" max="8" step="0.01"></input><br>
+        <!-- <label for="saturation">Saturation</label><br>
+        <input id="saturation" value="1" type="range" min="0" max="6" step="0.01"><br> -->
+        <!-- <label for="denoise">Firefly Filter</label><br>
+        <input id="denoise" type="checkbox"></input><br> -->
+        <!-- <label for="sigma">Firefly Sigma</label><br>
+        <input id="sigma" value="2" type="range" min="1" max="8" step="0.01"></input><br> -->
     </form>
     <canvas id="trace"></canvas>
     <script type="module" src="main.js"></script>
