--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <input id="focal-depth" type="number" value="2.0" step="0.001"><br>
         <label for="aperture-size">Aperture Size</label><br>
         <input id="aperture-size" type="number" value="0.02" step="0.001"><br>
+        <label for="distortion">Distortion</label><br>
+        <input id="distortion" type="number" value="0.0" step="0.001"><br>
+        <label for="bokeh">Bokeh distribution</label><br>
+        <input id="bokeh" type="number" value="0.5" step="0.001"><br>
         <label for="eye-pos">Camera Position</label><br>
         <input id="eye-pos" type="text"><br>
         <label for="camera-dir">Camera Direction</label><br>
@@ -27,8 +31,8 @@
         <input id="env-theta" value="0" type="range" min="0" max="1" step="0.01"><br>
         <label for="exposure">Exposure</label><br>
         <input id="exposure" value="1" type="range" min="0" max="6" step="0.01"><br>
-        <!-- <label for="saturation">Saturation</label><br>
-        <input id="saturation" value="1" type="range" min="0" max="6" step="0.01"><br> -->
+        <label for="saturation">Saturation</label><br>
+        <input id="saturation" value="1" type="range" min="0" max="6" step="0.01"><br>
         <!-- <label for="denoise">Firefly Filter</label><br>
         <input id="denoise" type="checkbox"></input><br> -->
         <!-- <label for="sigma">Firefly Sigma</label><br>
