--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <input id="sigma" value="2" type="range" min="1" max="8" step="0.01"></input><br> -->
     </form>
     <canvas id="trace"></canvas>
-    <script type="module" src="pike.js"></script>
+    <script type="module" src="render/pike.js"></script>
 </body>
 
 </html>
