--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <input id="eye-pos" type="text"><br>
         <label for="camera-dir">Camera Direction</label><br>
         <input id="camera-dir" type="text"><br>
-        <label for="env-theta">Env Theta</label><br>
+        <label for="env-theta">Env Rotationn</label><br>
         <input id="env-theta" value="0" type="range" min="0" max="1" step="0.01"><br>
         <label for="exposure">Exposure</label><br>
         <input id="exposure" value="1" type="range" min="0" max="6" step="0.01"><br>
