--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <label for="aperture-size">Aperture Size</label><br>
         <input id="aperture-size" type="number" value="0.0" step="0.001"><br>
         <label for="distortion">Distortion</label><br>
-        <input id="distortion" type="number" value="0.0" step="0.001"><br>
+        <input id="distortion" value="0" type="range" min="-1" max="10" step="0.01"><br>
         <label for="bokeh">Bokeh distribution</label><br>
         <input id="bokeh" type="number" value="0.5" step="0.001"><br>
         <label for="eye-pos">Camera Position</label><br>
